select page half way

--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
-#asgn1{
-	color: white;
+a.asgn1{
+	color: black;
+	display: block;
+	text-decoration: none;
 	font-family: "calibri";
-	background-color: red;
-	padding:2px;
+	background-image: url("Limeade.jpg");
+	padding:10px;
 	text-align: center;
+	font-size: 3.5vw;
+	border-radius: 10px;
+	text-shadow: 1px 1px gray;
+	text-decoration: none;
+	margin-right: auto;
+	margin-left: auto;
+	width: 33.33%;
 }
+
