--- a/asgn1/styles.css
+++ b/asgn1/styles.css
@@ -4,16 +4,61 @@
 .content{
 	background-color: #ecf0f1;
 	margin: auto;
-	padding: 10px;
 	margin-top: 20px;
 	border-radius: 5px;
+	padding: 20px;
+	width: 550px;
 }
 .btn{
 	color: white;
-	background-color: #9b59b6;
+	background-color: #e74c3c;
 	border: none;
 	font-size: 35px;
-	font-weight: bold;
+	display: inline-block;
+	font-family: "calibri";
+	float:left;
+	cursor: pointer;
+}
+
+.btn:hover{
+	background-color: #c0392b;
+}
+.active{
+	color: white;
+	background-color: #c0392b;
+	border: none;
+	font-size: 35px;
+	display: inline-block;
+	font-family: "calibri";
+	float:left;
+	cursor: pointer;
+}
+.deactive{
+	color: white;
+	background-color: #e74c3c;
+	border: none;
+	font-size: 35px;
+	display: inline-block;
+	font-family: "calibri";
+	float:left;
+	cursor: pointer;
+}
+.preference{
+	font-size: 30px;
+	font-family: "calibri";
+	
+}
+.form{
+	padding-top: 100px;
+}
+input[type=text], input[type=password]{
+	width:100%;
+	padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 0 0 0 1px;
+    border-color: blue;
+    box-sizing: border-box;
 }
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
