--- a/asgn1/styles.css
+++ b/asgn1/styles.css
@@ -80,6 +80,10 @@ input[type=submit]{
 	border: none;
 	margin-top: 20px;
 }
+.radio_text{
+	font-family: "calibri";
+	font-size: 25px;
+}
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
