--- a/asgn1/styles.css
+++ b/asgn1/styles.css
@@ -8,6 +8,8 @@
 	border-radius: 5px;
 	padding: 20px;
 	width: 550px;
+	padding-right: 20px;
+	display: block;
 }
 .btn{
 	color: white;
@@ -83,6 +85,7 @@ input[type=submit]{
 .radio_text{
 	font-family: "calibri";
 	font-size: 25px;
+	margin-left: 20px;
 }
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
@@ -96,3 +99,15 @@ input[type=submit]{
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
+@media screen and (max-width: 600px){
+	.content {
+		width: 90%;
+	}
+	.btn {
+		display: block;
+		float: none;
+	}
+	.col-6 {
+		width: 100%;
+	}
+}
