--- a/asgn1/styles.css
+++ b/asgn1/styles.css
@@ -1,5 +1,5 @@
 .background{
-	background-color: #bdc3c7;
+	background-image: url("3.jpg");
 }
 .content{
 	background-color: #ecf0f1;
@@ -10,6 +10,7 @@
 	width: 550px;
 	padding-right: 20px;
 	display: block;
+	opacity: 0.8;
 }
 .btn{
 	color: white;
