--- a/asgn1/styles.css
+++ b/asgn1/styles.css
@@ -103,6 +103,7 @@ input[type=submit]{
 @media screen and (max-width: 600px){
 	.content {
 		width: 90%;
+		margin: 0px;
 	}
 	.btn {
 		display: block;
